// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-recurrence-rule-field Renders \`pbehavior-recurrence-rule-field\` with custom props 1`] = `
<div
  class="flex"
>
  <button
    class="ml-0 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
    type="button"
  >
    <span
      class="v-btn__content"
    >
    Edit recurrence rule
    </span>
  </button>
  <span
    class="v-tooltip v-tooltip--top"
    fixed=""
  >
    <!---->
    <button
      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light grey--text text--darken-1"
        >
          info
        </i>
      </span>
    </button>
  </span>
  <c-action-btn-stub
    type="delete"
  />
</div>
`;

exports[`pbehavior-recurrence-rule-field Renders \`pbehavior-recurrence-rule-field\` with required props 1`] = `
<div
  class="flex"
>
  <button
    class="ml-0 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
    type="button"
  >
    <span
      class="v-btn__content"
    >
    Add recurrence rule
    </span>
  </button>
  <!---->
</div>
`;
